Added new features to the Harden System Security App
* Added extra removal strategy for tattooed policy `EnableSvchostMitigationPolicy` in the Miscellaneous Category.

* Added extra removal strategy for tattooed policy `LongPathsEnabled` in the Miscellaneous Category.

* Added TLS Sub-Category for Battle.net game client to the Protect page.

* Added Miscellaneous Sub-Category for reduced telemetry in the OS to the Protect page.

* Added a new policy to the BitLocker category: **Allow network connectivity during connected-modern-standby (only when plugged in)**. Keeps the Operation System and Microsoft Defender up to date while the device Modern Standby capable and is plugged in (meaning it's not on battery).

--- a/Harden System Security/Resources/BitLockerSettings.json
+++ b/Harden System Security/Resources/BitLockerSettings.json
@@ -318,5 +318,21 @@
         "Category": 4,
         "SubCategory": null,
         "DefaultRegValue": null
+    },
+    {
+        "Source": 0,
+        "KeyName": "SOFTWARE\\Policies\\Microsoft\\Power\\PowerSettings\\f15576e8-98b7-4186-b944-eafa664402d9",
+        "ValueName": "ACSettingIndex",
+        "Type": 4,
+        "Size": 4,
+        "Data": "AQAAAA==",
+        "RegValue": "0",
+        "Hive": null,
+        "PolicyAction": 0,
+        "FriendlyName": "ACConnectivityInStandby_BitLocker",
+        "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-admx-power#acconnectivityinstandby_2",
+        "Category": 4,
+        "SubCategory": null,
+        "DefaultRegValue": null
     }
 ]
