Disabled Runtime Marshaling for all .NET projects
Disabled Runtime Marshaling for all .NET projects.

Added many extra code analyzers to the projects.

Improved custom app window frame handling during window closure.

Added extra Direct PInvokes for improved performance.

Removed empty whitespaces from multiple files.

--- a/AppControl Manager/eXclude/DISMService/DISMService.csproj
+++ b/AppControl Manager/eXclude/DISMService/DISMService.csproj
@@ -22,6 +22,7 @@
 		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 		<DebugType>none</DebugType>
+		<DisableRuntimeMarshalling>True</DisableRuntimeMarshalling>
 	</PropertyGroup>
 
 	<ItemGroup>
