--- a/AppControl Manager/eXclude/QuantumRelayHSS/QuantumRelayHSS.csproj
+++ b/AppControl Manager/eXclude/QuantumRelayHSS/QuantumRelayHSS.csproj
@@ -34,6 +34,7 @@
 		<EnableUnsafeUTF7Encoding>false</EnableUnsafeUTF7Encoding>
 		<EnableUnsafeBinaryFormatterSerialization>false</EnableUnsafeBinaryFormatterSerialization>
 		<DebuggerSupport>false</DebuggerSupport>
+		<DisableRuntimeMarshalling>True</DisableRuntimeMarshalling>
 	</PropertyGroup>
 
 	<Import Project="..\CommonCore\CommonCore.projitems" Label="Shared" />
