AppControl-Manager-v-2.0.46.0-And-Harden-System-Security-v-1.0.17.0
🩵 Updated major dependencies, including the .NET SDK, Windows App SDK, C++ platform tools and Rust toolchain, to the latest versions released just hours ago. These releases contain important security and reliability updates. Harden System Security proactively stays current so users stay protected.

🩵 Added the [Overrides for Microsoft Security Baselines](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Overrides-for-Microsoft-Security-Baseline) category to the [Protect page](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Protect) so that you can easily select it to apply when applying the Microsoft Security Baselines. See the [related discussion](https://github.com/HotCakeX/Harden-Windows-Security/discussions/889#discussioncomment-14673534).

🩵 Updated the GitHub [wiki documentation](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Harden-System-Security) of the Harden System Security app and added details regarding the CommandLine Interface (CLI) support and usage.

<br>

🩵 Updated major dependencies, including the .NET SDK, Windows App SDK, C++ platform tools and Rust toolchain, to the latest versions released just hours ago. These releases contain important security and reliability updates. AppControl Manager proactively stays current so users stay protected.

🩵 Added CommandLine support for deploying the RMM (Remote Monitoring and Management) software blocking policy in Audit and Enforce mode. Please see [the Wiki documentation for usage guide](https://github.com/HotCakeX/Harden-Windows-Security/wiki/AppControl-Manager). Completes [this](https://github.com/HotCakeX/Harden-Windows-Security/issues/793) feature request.

🩵 Improved the visual design of the policy-creation mode selector on the [Create Supplemental Policy](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Create-Supplemental-App-Control-Policy) and [Create Deny Policy](https://github.com/HotCakeX/Hard

--- a/.github/workflows/Build AppControl Manager MSIX Package.yml
+++ b/.github/workflows/Build AppControl Manager MSIX Package.yml
@@ -235,12 +235,15 @@ jobs:
                   # https://learn.microsoft.com/visualstudio/install/workload-component-id-vs-build-tools
                   # https://learn.microsoft.com/visualstudio/install/use-command-line-parameters-to-install-visual-studio
                   # https://learn.microsoft.com/visualstudio/install/workload-component-id-vs-community
-                  winget install --id Microsoft.VisualStudio.2022.BuildTools --exact --accept-package-agreements --accept-source-agreements --uninstall-previous --force --source winget --override '--force --wait --passive --add Microsoft.VisualStudio.Workload.VCTools --add Microsoft.VisualStudio.Workload.MSBuildTools --add Microsoft.VisualStudio.Workload.UniversalBuildTools --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.Windows11SDK.26100 --includeRecommended --add Microsoft.VisualStudio.Component.VC.Tools.ARM64'
+                  # winget install --id Microsoft.VisualStudio.2022.BuildTools --exact --accept-package-agreements --accept-source-agreements --uninstall-previous --force --source winget --override '--force --wait --passive --add Microsoft.VisualStudio.Workload.VCTools --add Microsoft.VisualStudio.Workload.MSBuildTools --add Microsoft.VisualStudio.Workload.UniversalBuildTools --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.Windows11SDK.26100 --includeRecommended --add Microsoft.VisualStudio.Component.VC.Tools.ARM64'
+
+                  # Using this until version 18 build tools are added to Winget
+                  Invoke-RestMethod -Uri "https://aka.ms/vs/18/insiders/vs_BuildTools.exe" -OutFile "vs_BuildTools.exe"
+                  .\vs_BuildTools.exe --force --wait --passive --add Microsoft.VisualStudio.Workload.VCTools --add Microsoft.VisualStudio.Workload.MSBuildTools --add Microsoft.VisualStudio.Workload.UniversalBuildTools --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.Windows11SDK.26100 --includeRecommended --add Microsoft.VisualStudio.Component.VC.Tools.ARM64
 
                   if ($LASTEXITCODE -ne 0) { throw [System.InvalidOperationException]::New('Failed to install Visual Studio Build Tools') }
 
-                  winget install --id Microsoft.VCRedist.2015+.x64 --exact --accept-package-agreements --accept-source-agreements --uninstall-previous --force --source winget
-
+                  # winget install --id Microsoft.VCRedist.2015+.x64 --exact --accept-package-agreements --accept-source-agreements --uninstall-previous --force --source winget
               }
 
               # Refresh the environment variables so the current session detects the new dotnet installation
