--- a/AppControl Manager/eXclude/ComManager/ComManager.vcxproj
+++ b/AppControl Manager/eXclude/ComManager/ComManager.vcxproj
@@ -25,6 +25,8 @@
     <RootNamespace>ComManager</RootNamespace>
     <ConfigurationType>Application</ConfigurationType>
     <ProjectName>ComManager</ProjectName>
+    <WindowsTargetPlatformVersion>10.0.26100.0</WindowsTargetPlatformVersion>
+    <PlatformToolset>v145</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'" Label="Configuration">
