--- a/Harden System Security/Harden System Security.csproj
+++ b/Harden System Security/Harden System Security.csproj
@@ -1,34 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<!-- https://github.com/microsoft/CsWinRT/blob/master/nuget/Microsoft.Windows.CsWinRT.targets -->
 
+    <!-- Import the build props from the AppControl Manager's directory -->
+    <PropertyGroup>
+        <!-- https://learn.microsoft.com/visualstudio/msbuild/customize-by-directory -->
+        <DirectoryBuildPropsPath>..\AppControl Manager\Directory.Build.props</DirectoryBuildPropsPath>
+    </PropertyGroup>
+
+    <!-- Imports the Common Core -->
+    <Import Project="$(DirectoryBuildPropsPath)" />
+    <Import Project="..\AppControl Manager\eXclude\CommonCore\CommonCore.projitems" Label="Shared" />
+
 	<!-- Global -->
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFramework>net10.0-windows10.0.26100.0</TargetFramework>
-		<TargetPlatformMinVersion>10.0.22621.0</TargetPlatformMinVersion>
 
-		<!-- https://learn.microsoft.com/en-us/microsoft-edge/webview2/how-to/static -->
+		<!-- https://learn.microsoft.com/microsoft-edge/webview2/how-to/static -->
 		<WebView2LoaderPreference>Static</WebView2LoaderPreference>
-
-		<!-- https://learn.microsoft.com/dotnet/standard/frameworks#support-older-os-versions -->
-		<SupportedOSPlatformVersion>10.0.22621.0</SupportedOSPlatformVersion>
-
-		<!-- https://learn.microsoft.com/dotnet/core/project-sdk/msbuild-props#invariantglobalization -->
-		<InvariantGlobalization>true</InvariantGlobalization>
-
-		<!-- https://learn.microsoft.com/dotnet/core/tools/sdk-errors/netsdk1100 -->
-		<!-- To satisfy the Dependency Graph action on GitHub -->
-		<EnableWindowsTargeting>true</EnableWindowsTargeting>
-
-		<TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
 		<RootNamespace>HardenSystemSecurity</RootNamespace>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
-		<Platforms>x64;arm64</Platforms>
-		<RuntimeIdentifiers>win-x64;win-arm64</RuntimeIdentifiers>
-		<PublishProfile>win-$(Platform).pubxml</PublishProfile>
 		<UseWinUI>true</UseWinUI>
 		<EnableMsixTooling>true</EnableMsixTooling>
-		<Nullable>enable</Nullable>
 
         <!-- CsWinRT has certain requirements for it: https://github.com/microsoft/CsWinRT
         Using the latest version as defined in the CsWinRT release notes guarantees that we use the latest CsWinRT projections features.
@@ -45,20 +37,9 @@
         https://learn.microsoft.com/windows/apps/windows-app-sdk/downloads
         -->
 		<WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
-
-		<!-- Publish Properties -->
-		<!-- Can't use and don't need Ready2Run when using Native AOT -->
-		<PublishReadyToRun>false</PublishReadyToRun>
-
-		<ImplicitUsings>disable</ImplicitUsings>
 		<Description>Harden System Security application can secure and harden your system against advanced threats using security measures provided by Microsoft and already available in the Windows OS.</Description>
-		<PackageProjectUrl>https://github.com/HotCakeX/Harden-Windows-Security</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/HotCakeX/Harden-Windows-Security</RepositoryUrl>
 		<PackageTags>Harden System Security, Harden, Windows, Firewall, Security, BitLocker</PackageTags>
 		<PackageReleaseNotes>https://github.com/HotCakeX/Harden-Windows-Security/releases</PackageReleaseNotes>
-
-		<!-- https://learn.microsoft.com/dotnet/core/project-sdk/msbuild-props#rollforward -->
-		<RollForward>LatestMajor</RollForward>
 
 		<!-- Automatically created for packing -->
 		<!-- https://learn.microsoft.com/windows/msix/app-installer/create-appinstallerfile-vs -->
@@ -83,22 +64,13 @@
 		<AssemblyName>HardenSystemSecurity</AssemblyName>
 		<!-- https://learn.microsoft.com/dotnet/core/deploying/native-aot/optimizing -->
 
-		<ErrorReport>send</ErrorReport>
-		<FileVersion>1.0.17.0</FileVersion>
+		<FileVersion>1.0.18.0</FileVersion>
 		<AssemblyVersion>$(FileVersion)</AssemblyVersion>
-		<NeutralLanguage>en-US</NeutralLanguage>
 		<StartupObject>HardenSystemSecurity.Program</StartupObject>
-		<LangVersion>preview</LangVersion>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
-
-		<!-- https://learn.microsoft.com/dotnet/csharp/language-reference/unsafe-code -->
-		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-
 		<Version>$(FileVersion)</Version>
 		<Copyright>© 2024-Present</Copyright>
 		<Title>Harden System Security</Title>
-		<CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
-		<IlcMaxVectorTBitWidth>512</IlcMaxVectorTBitWidth>
 
 		<!-- https://learn.microsoft.com/dotnet/standard/garbage-collection/workstation-server-gc -->
 		<!-- https://learn.microsoft.com/dotnet/standard/garbage-collection/background-gc -->
@@ -108,58 +80,14 @@
             <ServerGarbageCollection>true</ServerGarbageCollection>
             <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
         -->
-
-		<!-- https://learn.microsoft.com/dotnet/core/project-sdk/msbuild-props#optimizeimplicitlytriggeredbuild -->
-		<OptimizeImplicitlyTriggeredBuild>True</OptimizeImplicitlyTriggeredBuild>
-
-		<!-- https://learn.microsoft.com/en-us/dotnet/standard/native-interop/disabled-marshalling -->
-		<!-- https://learn.microsoft.com/en-us/dotnet/core/project-sdk/msbuild-props#disableruntimemarshalling -->
-		<!-- https://github.com/dotnet/runtime/blob/main/docs/design/libraries/LibraryImportGenerator/Compatibility.md#bool-marshalling -->
-		<!-- https://learn.microsoft.com/en-us/dotnet/standard/native-interop/type-marshalling -->
-		<!-- Disabling runtime marshaling is better because of predictability, and problems arise during compilation rather than runtime. -->
-		<!-- It's also a best practice to disable runtime marshaling so we will be explicit rather than relying on implicit details. -->
-		<DisableRuntimeMarshalling>True</DisableRuntimeMarshalling>
-
 	</PropertyGroup>
 
-	<!--
-    The default parameters passed to the ILC.exe during compilation
-    https://github.com/dotnet/runtime/blob/main/src/coreclr/nativeaot/BuildIntegration/Microsoft.NETCore.Native.targets
-
-
-    We can pass the parameters displayed by the - -help switch of the ilc.exe using the syntax below
-    "C:\Users\HotCakeX\.nuget\packages\runtime.win-x64.microsoft.dotnet.ilcompiler\9.0.2\tools\ilc.exe"
-
-    We can see what parameters were used by the NAOT code generator, ILC, by inspecting the response file located at:
-    "Harden-Windows-Security\AppControl Manager\obj\x64\Release\net9.0-windows10.0.26100.0\win-x64\native\AppControlManager.ilc.rsp"
-
-    -->
 	<ItemGroup>
-		<!-- The logs generated by the following parameters will be included in the binlog file specified by the -bl:X64MSBuildLog.binlog parameter on the CLI -->
-		<IlcArg Include="--debug" />
-		<IlcArg Include="--verbose" />
-
-		<!--  <IlcArg Include="- -methodbodyfolding" /> -->
-
-		<!--
-            https://learn.microsoft.com/windows/win32/api/libloaderapi/nf-libloaderapi-loadlibraryexw
-            https://learn.microsoft.com/cpp/build/reference/dependentloadflag
-            https://learn.microsoft.com/dotnet/core/deploying/native-aot/interop#direct-pinvoke-calls
-            Without setting this, the result of the "dumpbin.exe /loadconfig HardenSystemSecurity.exe" will show: 0000 Dependent Load Flag
-            After setting it we'll see: 0800 Dependent Load Flag.
-
-            The dll names are case-insensitive.
-            LibraryImport doesn't need the ".dll" extension.
-
-        -->
-		<LinkerArg Include="/DEPENDENTLOADFLAG:0x800" />
-
 		<DirectPInvoke Include="USER32" />
 		<DirectPInvoke Include="ADVAPI32" />
 		<DirectPInvoke Include="OLE32" />
 		<DirectPInvoke Include="NTDLL" />
 		<DirectPInvoke Include="BCRYPT" />
-
 	</ItemGroup>
 
 	<!-- Only for Debug -->
@@ -184,12 +112,6 @@
 		<NuGetAudit>true</NuGetAudit>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 
-		<!-- https://learn.microsoft.com/dotnet/core/project-sdk/msbuild-props#satelliteresourcelanguages -->
-		<SatelliteResourceLanguages>en-US,he-IL</SatelliteResourceLanguages>
-
-		<RepositoryType>GitHub</RepositoryType>
-		<GenerateAssemblyInfo>True</GenerateAssemblyInfo>
-
 		<!-- There should be absolutely no trim warnings before this can be enabled
         Otherwise there is no guarantee that the app will work as expected at all times -->
 		<!-- https://learn.microsoft.com/dotnet/core/deploying/trimming/trimming-options -->
@@ -199,18 +121,7 @@
 		<SuppressTrimAnalysisWarnings>false</SuppressTrimAnalysisWarnings>
 		<ILLinkTreatWarningsAsErrors>true</ILLinkTreatWarningsAsErrors>
 		<TrimmerSingleWarn>false</TrimmerSingleWarn>
-		<TrimmerRemoveSymbols>true</TrimmerRemoveSymbols>
-		<!-- WASDK isn't a .NET library so it can't use these features and cannot be affected
-        We won't get warnings for these in compile time if a code or library relies on them.
-        We can get NotSupportedException exception during runtime instead. -->
-		<EnableUnsafeUTF7Encoding>false</EnableUnsafeUTF7Encoding>
-		<EnableUnsafeBinaryFormatterSerialization>false</EnableUnsafeBinaryFormatterSerialization>
-		<XmlResolverIsNetworkingEnabledByDefault>false</XmlResolverIsNetworkingEnabledByDefault>
-		<DebuggerSupport>false</DebuggerSupport>
 		<MetadataUpdaterSupport>false</MetadataUpdaterSupport>
-
-		<!-- Disabled by default in the default ILC.exe config -->
-		<EventSourceSupport>false</EventSourceSupport>
 
 		<!--
         Will cause the "Fold identical method bodies" feature to be implicitly enabled which can also be enabled by supplying "- -methodbodyfolding" to the ILC.exe .
@@ -224,13 +135,6 @@
         -->
 		<StackTraceSupport>true</StackTraceSupport>
 
-		<!-- https://learn.microsoft.com/dotnet/core/deploying/native-aot/security#control-flow-guard -->
-		<ControlFlowGuard>Guard</ControlFlowGuard>
-
-		<!-- https://learn.microsoft.com/dotnet/core/deploying/native-aot/security#control-flow-enforcement-technology-shadow-stack-net-9 -->
-		<CetCompat>true</CetCompat>
-
-		<GenerateAssemblyInfo>True</GenerateAssemblyInfo>
 		<PublishAot>True</PublishAot>
 		<OptimizationPreference>Speed</OptimizationPreference>
 
@@ -242,7 +146,6 @@
 		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 		<NuGetAuditMode>all</NuGetAuditMode>
 		<NuGetAuditLevel>low</NuGetAuditLevel>
-		<GenerateDocumentationFile>false</GenerateDocumentationFile>
 		<DocumentationFile>HardenSystemSecurityAPIDocumentation.xml</DocumentationFile>
 
 		<!-- Don't need this -->
@@ -255,9 +158,6 @@
 		<AnalysisModeGlobalization>All</AnalysisModeGlobalization>
 		<AnalysisModePerformance>All</AnalysisModePerformance>
 		<AnalysisModeInteroperability>All</AnalysisModeInteroperability>
-
-		<!-- https://learn.microsoft.com/dotnet/core/extensions/configuration-generator -->
-		<EnableConfigurationBindingGenerator>true</EnableConfigurationBindingGenerator>
 
 	</PropertyGroup>
 
@@ -361,7 +261,7 @@
 		<PackageReference Include="Microsoft.Graphics.Win2D" Version="1.3.2" />
 		<PackageReference Include="Microsoft.Identity.Client" Version="4.77.1" />
 		<PackageReference Include="Microsoft.Identity.Client.Broker" Version="4.77.1" />
-		<PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.3.0-prerelease.250720.1" />
+		<PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.3.0-prerelease.251015.2" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.251003001" />
 		<PackageReference Include="System.Security.Cryptography.Pkcs" Version="10.0.0-rc.2.25502.107" />
 		<PackageReference Include="System.Diagnostics.EventLog" Version="10.0.0-rc.2.25502.107" />
@@ -401,15 +301,6 @@
 		<DirectPInvoke Include="rust_interop" />
 		<NativeLibrary Include="../AppControl Manager/eXclude/Rust Interop Library/target/aarch64-pc-windows-msvc/release/rust_interop.lib" />
 	</ItemGroup>
-
-	<!--
-    Defining the "HasPackageAndPublishMenuAddedByProject" property here allows the Solution
-    Explorer "Package and Publish" context menu entry to be enabled for this project even if
-    the Windows App SDK Nuget package has not yet been restored.
-    -->
-	<PropertyGroup Condition="'$(DisableHasPackageAndPublishMenuAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
-		<HasPackageAndPublishMenu>true</HasPackageAndPublishMenu>
-	</PropertyGroup>
 
 	<PropertyGroup>
 		<DefineConstants>$(DefineConstants);HARDEN_SYSTEM_SECURITY</DefineConstants>
@@ -571,8 +462,5 @@
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 	</ItemGroup>
-
-	<!-- Imports the Common Core -->
-	<Import Project="..\AppControl Manager\eXclude\CommonCore\CommonCore.projitems" Label="Shared" />
 
 </Project>
