--- a/Harden System Security/Resources/BitLockerSettings.json
+++ b/Harden System Security/Resources/BitLockerSettings.json
@@ -10,10 +10,17 @@
         "Hive": null,
         "PolicyAction": 0,
         "FriendlyName": "FDVEncryptionType-BitLocker",
-        "URL": "",
+        "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#fixeddrivesencryptiontype",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            0,
+            2,
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 0,
@@ -29,7 +36,10 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 0,
@@ -45,7 +55,10 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 0,
@@ -61,7 +74,10 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 0,
@@ -77,7 +93,10 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 0,
@@ -93,7 +112,10 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 0,
@@ -109,7 +131,10 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 0,
@@ -125,7 +150,14 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesdisallowstandarduserscanchangepin",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            0,
+            2,
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 0,
@@ -141,7 +173,10 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesenhancedpin",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 0,
@@ -157,7 +192,14 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesminimumpinlength",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            0,
+            2,
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 0,
@@ -173,7 +215,12 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesencryptiontype",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 0,
@@ -189,7 +236,10 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#removabledrivesencryptiontype",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 0,
@@ -205,7 +255,12 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#encryptionmethodbydrivetype",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 0,
@@ -221,7 +276,12 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#encryptionmethodbydrivetype",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 0,
@@ -237,7 +297,12 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#encryptionmethodbydrivetype",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 0,
@@ -253,7 +318,10 @@
         "URL": "",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 0,
@@ -269,7 +337,10 @@
         "URL": "",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 0,
@@ -285,7 +356,12 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-power#allowstandbywhensleepingpluggedin",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 0,
@@ -301,7 +377,12 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-power#allowstandbystateswhensleepingonbattery",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 0,
@@ -317,7 +398,10 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-admx-windowsexplorer#showhibernateoption",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 0,
@@ -333,6 +417,10 @@
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-admx-power#acconnectivityinstandby_2",
         "Category": 4,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            3,
+            4
+        ]
     }
 ]
