--- a/Harden System Security/Resources/EdgeBrowserConfigurations.json
+++ b/Harden System Security/Resources/EdgeBrowserConfigurations.json
@@ -13,7 +13,12 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 1,
@@ -29,7 +34,10 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 1,
@@ -45,7 +53,11 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            4,
+            5
+        ]
     },
     {
         "Source": 1,
@@ -61,7 +73,10 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 1,
@@ -77,7 +92,14 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ]
     },
     {
         "Source": 1,
@@ -93,7 +115,10 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 1,
@@ -109,7 +134,14 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            0,
+            1,
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 1,
@@ -125,7 +157,11 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            4,
+            5
+        ]
     },
     {
         "Source": 1,
@@ -141,7 +177,11 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            4,
+            5
+        ]
     },
     {
         "Source": 1,
@@ -157,7 +197,11 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            4,
+            5
+        ]
     },
     {
         "Source": 1,
@@ -173,7 +217,11 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            4,
+            5
+        ]
     },
     {
         "Source": 1,
@@ -189,7 +237,11 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            4,
+            5
+        ]
     },
     {
         "Source": 1,
@@ -205,7 +257,11 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            4,
+            5
+        ]
     },
     {
         "Source": 1,
@@ -221,7 +277,10 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     },
     {
         "Source": 1,
@@ -237,7 +296,12 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            3,
+            4,
+            5
+        ]
     },
     {
         "Source": 1,
@@ -253,6 +317,9 @@
         "URL": "https://learn.microsoft.com/deployedge/configure-edge-with-mdm",
         "Category": 14,
         "SubCategory": null,
-        "DefaultRegValue": null
+        "DefaultRegValue": null,
+        "DeviceIntents": [
+            99
+        ]
     }
 ]
